--- a/ pytest.ini
+++ b/ pytest.ini
@@ -3,3 +3,4 @@ markers =
     smoke: marker for smoke tests
     regression: marker for regression tests
     win10
+    need_review: marker for need review test
